# cuda-oxide

./: .gitignore  AGENTS.md  ARCHITECTURAL_THINKING.md  ARCHITECTURE.md  COMMUNITY_STRATEGY.md  Cargo.toml  ECOSYSTEM_INVENTORY.md  FLUX_TO_PTX.md  GRAND_ABSTRACT.md  LOOM_INSTRUCTIONS.md  PIPELINE.md  README.md  SYNERGY_ANALYSIS.md
crates/cargo-oxide/: README.md
crates/cargo-oxide/src/: main.rs
crates/cuda-async/: README.md
crates/cuda-async/src/: lib.rs
crates/cuda-bindings/: README.md
crates/cuda-core/: README.md  REFACTORING_PLAN.md
crates/cuda-core/src/: context.rs  device_buffer.rs  embedded.rs  error.rs  event.rs  lib.rs  module.rs  peer.rs  pinned_host_buffer.rs  stream.rs  vmm.rs
crates/cuda-device/: README.md
crates/cuda-device/src/: atomic.rs  lib.rs  shared.rs  thread.rs
crates/cuda-host/: README.md
crates/cuda-host/src/: lib.rs
crates/cuda-macros/: README.md
crates/cuda-macros/src/: lib.rs
crates/dialect-mir/: README.md
crates/dialect-mir/src/: attributes.rs  lib.rs  types.rs
crates/dialect-mir/src/ops/: aggregate.rs  arithmetic.rs  call.rs  cast.rs  comparison.rs  constants.rs  control_flow.rs  enum_ops.rs  function.rs  memory.rs  mod.rs  storage.rs
crates/dialect-nvvm/: README.md
crates/dialect-nvvm/src/: lib.rs
crates/fuzzer/: README.md
crates/fuzzer/rustlantis/difftest/: Cargo.toml
crates/fuzzer/rustlantis/generate/: Cargo.toml
crates/fuzzer/rustlantis/mir/: Cargo.toml
crates/fuzzer/src/: lib.rs
crates/libnvvm-sys/: README.md
crates/libnvvm-sys/src/: lib.rs
crates/llvm-export/: README.md
crates/llvm-export/src/: lib.rs
crates/llvm-export/src/export/: mod.rs  module.rs
crates/mir-importer/: README.md
crates/mir-importer/src/: lib.rs
crates/mir-importer/src/translator/: mod.rs  types.rs
crates/mir-lower/: README.md
crates/mir-lower/src/: helpers.rs  lib.rs
crates/mir-lower/src/convert/: mod.rs
crates/nvjitlink-sys/: README.md
crates/oxide-artifacts/: README.md
crates/oxide-artifacts/src/: lib.rs
crates/reserved-oxide-symbols/: README.md
crates/reserved-oxide-symbols/src/: lib.rs
crates/rustc-codegen-cuda/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/abi_hmm/: Cargo.toml
crates/rustc-codegen-cuda/examples/addressof_sharedarray_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/array_index/: Cargo.toml
crates/rustc-codegen-cuda/examples/async_mlp/: Cargo.toml
crates/rustc-codegen-cuda/examples/async_vecadd/: Cargo.toml
crates/rustc-codegen-cuda/examples/atomics/: Cargo.toml
crates/rustc-codegen-cuda/examples/barrier/: Cargo.toml
crates/rustc-codegen-cuda/examples/cast_tests/: Cargo.toml
crates/rustc-codegen-cuda/examples/clc/: Cargo.toml
crates/rustc-codegen-cuda/examples/cluster/: Cargo.toml
crates/rustc-codegen-cuda/examples/compiler_features/: Cargo.toml
crates/rustc-codegen-cuda/examples/complex_mul/: Cargo.toml
crates/rustc-codegen-cuda/examples/constant_memory/: Cargo.toml
crates/rustc-codegen-cuda/examples/constant_memory_coeffs/: Cargo.toml
crates/rustc-codegen-cuda/examples/constant_memory_simple/: Cargo.toml
crates/rustc-codegen-cuda/examples/coop_groups_demo/: Cargo.toml
crates/rustc-codegen-cuda/examples/cpp_consumes_rust_device/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_kernel/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_kernel/kernel-lib/: Cargo.toml
crates/rustc-codegen-cuda/examples/cuda_module_contract/: Cargo.toml
crates/rustc-codegen-cuda/examples/cutile_inter_kernel/: Cargo.toml
crates/rustc-codegen-cuda/examples/debug/: Cargo.toml
crates/rustc-codegen-cuda/examples/device_closures/: Cargo.toml
crates/rustc-codegen-cuda/examples/device_ffi_test/: Cargo.toml
crates/rustc-codegen-cuda/examples/device_global/: Cargo.toml
crates/rustc-codegen-cuda/examples/dynamic_smem/: Cargo.toml
crates/rustc-codegen-cuda/examples/error/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_copy_nonoverlapping_unhandled/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_drop_glue/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_set_discriminant_unhandled/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_wgmma_mma_unimplemented/: Cargo.toml
crates/rustc-codegen-cuda/examples/f16_stress/: Cargo.toml
crates/rustc-codegen-cuda/examples/fmaxmin_smoke/: Cargo.toml
crates/rustc-codegen-cuda/examples/future_apis/: Cargo.toml
crates/rustc-codegen-cuda/examples/gemm/: Cargo.toml
crates/rustc-codegen-cuda/examples/gemm_sol/: Cargo.toml
crates/rustc-codegen-cuda/examples/generic/: Cargo.toml
crates/rustc-codegen-cuda/examples/hashmap/: Cargo.toml
crates/rustc-codegen-cuda/examples/hashmap_v2/: Cargo.toml
crates/rustc-codegen-cuda/examples/hashmap_v3/: Cargo.toml
crates/rustc-codegen-cuda/examples/hello_constant/: Cargo.toml
crates/rustc-codegen-cuda/examples/helper_fn/: Cargo.toml
crates/rustc-codegen-cuda/examples/host_closure/: Cargo.toml
crates/rustc-codegen-cuda/examples/index2d_const/: Cargo.toml
crates/rustc-codegen-cuda/examples/manual_launch_generic/: Cargo.toml
crates/rustc-codegen-cuda/examples/manual_launch_libdevice/: Cargo.toml
crates/rustc-codegen-cuda/examples/mathdx_ffi_test/: Cargo.toml
crates/rustc-codegen-cuda/examples/mathdx_ffi_test/libmathdx-sys/: Cargo.toml
crates/rustc-codegen-cuda/examples/mcast_barrier_test/: Cargo.toml
crates/rustc-codegen-cuda/examples/rustlantis-smoke/: Cargo.toml
crates/rustc-codegen-cuda/examples/sharedmem/: Cargo.toml
crates/rustc-codegen-cuda/examples/standalone_device_fn/: Cargo.toml
crates/rustc-codegen-cuda/examples/tcgen05/: Cargo.toml
crates/rustc-codegen-cuda/examples/tcgen05_matmul/: Cargo.toml
crates/rustc-codegen-cuda/examples/tiled_gemm/: Cargo.toml
crates/rustc-codegen-cuda/examples/tma_copy/: Cargo.toml
crates/rustc-codegen-cuda/examples/tma_multicast/: Cargo.toml
crates/rustc-codegen-cuda/examples/warp_reduce/: Cargo.toml
crates/rustc-codegen-cuda/examples/wgmma/: Cargo.toml
crates/rustc-codegen-cuda/src/: lib.rs
docs/: MUSIC_COGNITION_ARCHITECTURE.md
(+14 files in other folders)
