[package]
name = "array_index"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example tests array index operations (reads and writes, constant and runtime indices).
# Build with:
#   cargo oxide run array_index
#
# Expected results:
#   - Constant index read: PASS (uses extractvalue)
#   - Runtime index read: PASS (uses alloca+gep+load, inefficient but works)
#   - Constant index write: FAIL (MirInsertFieldOp doesn't support arrays yet)
#   - Runtime index write: FAIL (ProjectionElem::Index not implemented for writes)

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
