[package]
name = "async_mlp"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Async MLP example: multi-kernel pipeline with DeviceOperation composition.
# Build with:
#   cargo oxide run async_mlp

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host", features = ["async"] }
cuda-core = { path = "../../../cuda-core" }
cuda-async = { path = "../../../cuda-async" }
cuda-bindings = { path = "../../../cuda-bindings" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
