[package]
name = "async_vecadd"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates the async CUDA launch path with DeviceOperation.
# Build with:
#   cargo oxide run async_vecadd

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host", features = ["async"] }
cuda-core = { path = "../../../cuda-core" }
cuda-async = { path = "../../../cuda-async" }
cuda-bindings = { path = "../../../cuda-bindings" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
