[package]
name = "coop_groups_demo"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# End-to-end smoke test for cuda_device::cooperative_groups:
# raw warp/grid intrinsics, typed group handles (Grid, ThreadBlock,
# WarpTile<N>), and warp/block reductions and scans. See README.md
# for the full check list and the op/type matrix.
#
# Build:
#   cargo oxide build coop_groups_demo
# Run (one-shot, requires a real GPU):
#   cargo oxide run coop_groups_demo

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
