[package]
name = "cross_crate_kernel"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# This is a standalone workspace to allow the nested kernel-lib crate
[workspace]
members = ["kernel-lib"]

[dependencies]
# The kernel library - contains #[kernel] functions
kernel-lib = { path = "kernel-lib" }

cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
