[package]
name = "device_closures"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# This is a standalone workspace member for unified compilation testing
[workspace]

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-core = { path = "../../../cuda-core" }
cuda-host = { path = "../../../cuda-host" }
