[package]
name = "device_global"
version = "0.1.0"
edition = "2021"
authors = ["NVIDIA CORPORATION"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates ordinary Rust statics in CUDA global memory.
# Build and run with:
#   cargo oxide run device_global

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
