[package]
name = "dynamic_smem"
version = "0.1.0"
edition = "2021"
authors = ["NVIDIA CORPORATION"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates dynamic shared memory (DynamicSharedArray) in unified compilation.
# Build with:
#   cargo oxide run dynamic_smem

[dependencies]
# Device-side intrinsics (thread indexing, barriers, DynamicSharedArray, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

cuda-core = { path = "../../../cuda-core" }
