[package]
name = "future_apis"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

[workspace]

[dependencies]
cuda-core = { path = "../../../cuda-core" }
cuda-macros = { path = "../../../../crates/cuda-macros" }
cuda-device = { path = "../../../../crates/cuda-device" }
cuda-host = { path = "../../../../crates/cuda-host" }
