[package]
name = "gemm_sol"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Phase 1 GEMM: K-loop + grid tiling, no pre-tiling (SM100+ / Blackwell).
# Build with:
#   cargo oxide run gemm_sol

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
half = "2.4"
