[package]
name = "hashmap_v2"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"
default-run = "hashmap_v2"

[workspace]

[lib]
name = "hashmap_v2"
path = "src/lib.rs"

# Default binary: 12 correctness tests on real hardware.
# Picked up by `cargo oxide run hashmap_v2` and the smoketest harness.
[[bin]]
name = "hashmap_v2"
path = "src/main.rs"

# Perf bench binary: head-to-head GPU (B vs A insert) x (single vs warp find)
# x (50/75/90 % load) against single-thread CPU `hashbrown::HashMap` insert
# and rayon-parallel CPU `hashbrown` find. Run via `./run-bench.sh`.
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
hashbrown = "0.15"
rayon = "1.10"
