[package]
name = "hashmap_v3"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"
default-run = "hashmap_v3"

[workspace]

[lib]
name = "hashmap_v3"
path = "src/lib.rs"

# Default binary: correctness tests on real hardware.
# Picked up by `cargo oxide run hashmap_v3` and the smoketest harness.
[[bin]]
name = "hashmap_v3"
path = "src/main.rs"

# Perf bench binary: GPU find variants vs CPU `hashbrown`. Run via
# `./run-bench.sh`.
[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
hashbrown = "0.15"
rayon = "1.10"
