[package]
name = "hello_constant"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates unified compilation with rustc-codegen-cuda.
# Build with:
#   cargo oxide run hello_constant

[dependencies]
# Device-side intrinsics (thread indexing, barriers, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

cuda-core = { path = "../../../cuda-core" }
