[package]
name = "helper_fn"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates #[device] helper functions in unified compilation.
# Build with:
#   cargo oxide run helper_fn

[dependencies]
# Device-side intrinsics (thread indexing, barriers, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

cuda-core = { path = "../../../cuda-core" }
