[package]
name = "mathdx_ffi_test"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

[workspace]

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }

# For runtime LTOIR generation (Option B) - optional
libmathdx-sys = { path = "libmathdx-sys", optional = true }

[features]
default = []
# Enable libmathdx-based LTOIR generation (Option B)
# Requires LIBMATHDX_PATH environment variable to be set
libmathdx = ["dep:libmathdx-sys"]
