[package]
name = "mcast_barrier_test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]

# Minimal test for mbarrier_arrive_cluster + try_wait_parity in a loop.
# Tests the MCAST_BAR protocol used in gemm_sol_clc for TMA multicast.
# Build with:
#   cargo oxide run mcast_barrier_test

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
