[package]
name = "rustlantis-smoke"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Standalone crate (not part of the parent workspace).
[workspace]

# Build and run with:
#   cargo oxide run rustlantis-smoke
#
# This is Stage 1/2 of the rustlantis differential codegen testing plan;
# the full plan and trace infrastructure live in `crates/fuzzer/`.

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
fuzzer = { path = "../../../fuzzer" }
