[package]
name = "sharedmem"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates shared memory (SharedArray) in unified compilation.
# Build with:
#   cargo oxide run sharedmem

[dependencies]
# Device-side intrinsics (thread indexing, barriers, SharedArray, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime (with HMM support)
cuda-core = { path = "../../../cuda-core" }
