[package]
name = "tcgen05_matmul"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# SM100+ tcgen05 matmul using TMA and pre-tiled input.
# Build with:
#   cargo oxide run tcgen05_matmul

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
half = "2.4"
