[package]
name = "tiled_gemm"
version = "0.1.0"
edition = "2021"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# This example demonstrates tiled GEMM with shared memory in unified compilation.
# Build with:
#   cargo oxide run tiled_gemm

[dependencies]
# Device-side intrinsics (SharedArray, thread indexing, etc.)
cuda-device = { path = "../../../cuda-device" }

# Host-side utilities (CudaKernel trait, etc.)
cuda-host = { path = "../../../cuda-host" }

# Host-side CUDA runtime
cuda-core = { path = "../../../cuda-core" }
