[package]
name = "libmathdx-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to NVIDIA libmathdx (runtime code-generation for MathDx)"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"
repository = "https://github.com/NVlabs/cuda-oxide.git"
keywords = ["cuda", "ffi", "nvidia", "mathdx", "fft", "blas"]
categories = ["external-ffi-bindings", "science"]

[build-dependencies]
bindgen = "0.72.1"

[dependencies]

[features]
default = []
